--- a/sass/templates/_design-project.sass
+++ b/sass/templates/_design-project.sass
@@ -1,6 +1,6 @@
 .design-project
   padding-top: 0
-  padding-bottom: 30rem
+  padding-bottom: 25.28rem
 .title
   &__description
     max-width: 53rem
