--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -1,11 +1,12 @@
 .footer
   background: $dark url('../img/footer-bkgi.jpg') no-repeat center / cover
-  padding-top: 0
+  padding-top: 15.89rem
+  padding-bottom: 0
   &__wrap
     background-color: $black
     max-width: 63.07rem
     margin: auto
-    margin-top: -20rem
+    margin-top: -31.78rem
     margin-bottom: 3.714rem
     padding: 2.5rem
     padding-top: 3rem
